--- a/nettoyage_donnees.ipynb
+++ b/nettoyage_donnees.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,11 +114,40 @@
     "\n",
     "cleaned_text_df.to_csv(\"cleaned_text.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create an empty list to store the cleaned text\n",
+    "cleaned_phrase = []\n",
+    "# loop through all the rows in the 'text' column\n",
+    "for text in df['text']:\n",
+    "    # apply the 'nettoyage' function to clean the text\n",
+    "    cleaned = nettoyage_phrase(text)\n",
+    "    # add the cleaned text to the list\n",
+    "    cleaned_phrase.append(cleaned)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# phrases\n",
+    "cleaned_phrase = [' '.join(words) for words in cleaned_phrase]\n",
+    "cleaned_phrase_df = pd.DataFrame().assign(text=cleaned_phrase)\n",
+    "\n",
+    "cleaned_phrase_df.to_csv(\"cleaned_phrase.csv\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -132,9 +161,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.7"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "9f0194299e911b6a22f0cd3d1c9a66c991d39f48b249be23f24104e40900e329"
