--- a/analyse_thematiques.ipynb
+++ b/analyse_thematiques.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,12 +21,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Importation données\n",
-    "deci_jur = pd.read_csv(\"cleaned_text.csv\",  encoding = \"utf-8\")\n",
+    "deci_jur = pd.read_csv(\"cleaned_text2.csv\",  encoding = \"utf-8\")\n",
     "\n",
     "# Suppresion des valeurs manquantes\n",
     "deci_jur = deci_jur.dropna()\n",
@@ -35,28 +35,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Création de la liste des tweets\n",
     "list_deci_jur = []\n",
     "for i in range(len(deci_jur)):\n",
-    "   list_deci_jur.append(str(deci_jur.iloc[i, 0]).split())\n"
+    "   list_deci_jur.append(str(deci_jur.iloc[i, 1]).split())\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On peut maintenant réaliser une analyse thématique. Pour choisir le nombre de groupes, je suis partie de 10 groupes. J'ai vu que les groupes étaient trop ressemblants. J'ai donc diminué le nombre de groupe jusqu'a arriver à groupes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Group :  (0, '0.002*\"922\" + 0.002*\"967\" + 0.002*\"913\" + 0.002*\"958\" + 0.002*\"961\"')\n",
-      "Group :  (1, '0.002*\"996\" + 0.002*\"978\" + 0.002*\"981\" + 0.002*\"923\" + 0.002*\"999\"')\n",
-      "Group :  (2, '0.002*\"907\" + 0.002*\"906\" + 0.002*\"921\" + 0.002*\"942\" + 0.002*\"968\"')\n"
+      "Group :  (0, '0.018*\"vehicule\" + 0.016*\"accident\" + 0.013*\"attendu\" + 0.008*\"societe\" + 0.008*\"alors\" + 0.007*\"fait\" + 0.007*\"victime\" + 0.007*\"cause\"')\n",
+      "Group :  (1, '0.013*\"attendu\" + 0.013*\"avocat\" + 0.012*\"faute\" + 0.010*\"conseiller\" + 0.008*\"ou\" + 0.008*\"fait\" + 0.008*\"demeurant\" + 0.008*\"general\"')\n",
+      "Group :  (2, '0.013*\"victime\" + 0.012*\"prejudice\" + 0.009*\"attendu\" + 0.008*\"assureur\" + 0.007*\"accident\" + 0.006*\"indemnite\" + 0.006*\"assurances\" + 0.006*\"droit\"')\n"
      ]
     }
    ],
@@ -71,7 +79,7 @@
     "                     update_every=1, chunksize=100, passes=10, alpha='auto', per_word_topics=True)\n",
     "\n",
     "# Afficher les thèmes générés par le modèle LDA\n",
-    "topics = lda_model.print_topics(num_words=5)\n",
+    "topics = lda_model.print_topics(num_words=8)\n",
     "for topic in topics:\n",
     "    print(\"Group : \", topic)\n"
    ]
@@ -79,9 +87,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3.9 for Problem Detection",
    "language": "python",
-   "name": "python3"
+   "name": "pd39"
   },
   "language_info": {
    "codemirror_mode": {
@@ -93,7 +101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4,
   "vscode": {
