--- a/nettoyage_donnees.ipynb
+++ b/nettoyage_donnees.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda/envs/pd39/lib/python3.9/site-packages/torch/cuda/__init__.py:546: UserWarning: Can't initialize NVML\n",
+      "  warnings.warn(\"Can't initialize NVML\")\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "import pandas as pd\n",
@@ -12,12 +21,13 @@
     "import nltk\n",
     "import spacy\n",
     "import pandas as pd\n",
-    "from nltk.corpus import stopwords"
+    "from nltk.corpus import stopwords\n",
+    "from unidecode import unidecode"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,8 +79,6 @@
     "    return [token for token in text if token.isalnum()]\n",
     "\n",
     "## SUPPRESSION ACCENTS\n",
-    "from unidecode import unidecode\n",
-    "\n",
     "def suppr_accent(text):\n",
     "    return [unidecode(token) for token in text if token]\n",
     "\n",
@@ -160,9 +168,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9 for Problem Detection",
+   "display_name": "pd39",
    "language": "python",
-   "name": "pd39"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -175,11 +183,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.16"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "9f0194299e911b6a22f0cd3d1c9a66c991d39f48b249be23f24104e40900e329"
-   }
   }
  },
  "nbformat": 4,
