--- a/analyse_thematiques.ipynb
+++ b/analyse_thematiques.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,6 @@
     "import pandas as pd\n",
     "import nltk\n",
     "\n",
-    "\n",
     "from nltk.tokenize import word_tokenize\n",
     "from nltk.corpus import stopwords\n",
     "from nltk.stem import WordNetLemmatizer"
@@ -21,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,16 +45,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On peut maintenant réaliser une analyse thématique. Pour choisir le nombre de groupes, je suis partie de 10 groupes. J'ai vu que les groupes étaient trop ressemblants. J'ai donc diminué le nombre de groupe jusqu'a arriver à groupes"
+    "On peut maintenant réaliser une analyse thématique. Pour choisir le nombre de groupes, nous sommes parties avec 10 groupes. Les groupes se ressemblaient trop. Nous avons donc diminué le nombre de groupe jusqu'à arriver à 3 groupes. Les groupes sont assez caractéristiques."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -83,6 +89,19 @@
     "for topic in topics:\n",
     "    print(\"Group : \", topic)\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nous avons donc 3 groupes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -103,12 +122,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.16"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "9f0194299e911b6a22f0cd3d1c9a66c991d39f48b249be23f24104e40900e329"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
